[tool.poetry]
name = "ursa-base"
version = "0.1.0"
description = ""
authors = ["Rodolfo Figueroa"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
earthengine-api = "^1.0.0"
osmnx = "^1.3.0"
geopandas = "^0.14.4"
rasterio = "^1.3.6"
rioxarray = "^0.14.1"
geocube = "^0.4.0"
scipy = "^1.10.1"
xarray = "^2023.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
